blocks/hero-banner/hero-banner.css
.section.full-width.hero-banner-container {
    height: auto;
    margin-bottom: 2rem;
}

.hero-banner.careers {
    background-image: url("/assets/careers-mobile-top.jpg");
}

.hero-banner .hero-banner-media-section {
    height: 14.75rem;
    position: relative;
    width: 100%;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    top: 0;
    z-index: 0;
    overflow: hidden;
}

.hero-banner.careers .hero-banner-media-section {
    display: none;
}

.hero-banner video,
.hero-banner img,
.hero-banner.image-right img {
    width: 100%;
    object-fit: cover;
    height: 22.5rem;
    object-position: 80% 0;
}

.hero-banner.image-center img {
    object-position: center;
}

.hero-banner.image-left img {
    object-position: 20% 0;
}

.hero-banner .hero-banner-heading-section {
    position: relative;
    width: 100%;
    padding-right: 0;
    padding-left: 0;
    margin-right: auto;
    margin-left: auto;
    max-width: 100%;
}

.hero-banner .hero-banner-heading-container {
    position: relative;
    top: 0;
}

.hero-banner .hero-banner-text-container {
    background: var(--primary);
    color: var(--white);
    min-height: auto;
    padding : 2rem 1rem;
    width: auto;
    display: flex;
    flex-wrap: wrap;
    align-content: center;
    align-items: center;
    margin-bottom: 0;
    position: relative;
}

.hero-banner.careers .hero-banner-text-container {
    background: unset;
    flex-direction: column;
    text-align: center;
    padding-top: 10.7rem;
}

.hero-banner-text-wrapper h6 {
    color: #ffffffb3;
    margin-bottom: 0.75em;
    text-transform: uppercase;
    font-weight: 700;
    line-height: 1em;
    letter-spacing: 0.05em;
    font-size: var(--heading-font-size-xxxs);
}

.hero-banner-text-wrapper h2,
.hero-banner-text-wrapper h1 {
    font-weight: var(--font-weight-small);
    font-size: var(--heading-font-size-m);
    line-height: 2rem;
    color: var(--white);
    font-family: var(--body-font-family);
    margin: 2rem auto 1rem;
}

.hero-banner-text-wrapper p {
    margin: 1rem auto;
}

.hero-banner .hero-banner-button-container span {
    font-size: var(--heading-font-size-xxs);
    margin-left: 0.5rem;
    line-height: 1;
    text-align: center;
    color : #ffffff80;
    width: auto;
}

.hero-banner .hero-banner-button-container a.button.primary {
    background-image: url("../../icons/play.svg");
    height: 3.125rem;
    width: 3.125rem;
    min-width: auto;
    border-radius: 50%;
    margin-bottom: 0;
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
}

.hero-banner .hero-banner-button-container {
    flex-basis: 100%;
    width: 100%;
    justify-content: left;
    align-items: center;
    align-content: center;
    display: inline-flex;
    flex-wrap: wrap;
}

.hero-banner .hero-banner-text-wrapper {
    flex-basis: 100%;
    width: 100%;
    margin-bottom: 1.5rem;
}

.hero-banner .button-container {
    display: inline-flex;
    flex-direction: column;
    gap: 1rem;
}

.hero-banner.overlap .hero-banner-text-wrapper h2 {
    line-height: 2.5rem;
    margin: 0 auto 1.5rem;
}

.hero-banner a.button.primary.linkedin {
    background-color: unset;
    border: 1px solid white;
    padding-left: 2.5rem;
}

.hero-banner a.button.primary.linkedin:hover {
    opacity: 0.7;
}

.hero-banner span.icon-linkedin {
    margin-left: 0.625rem;
    margin-right: 1rem;
    height: 2rem;
    width: 2.125rem;
}

@media (min-width: 48rem) {
    .hero-banner .hero-banner-text-container::before:not(.right-text) {
        content: "";
        background: var(--primary);
        height: 100%;
        width: 100%;
        position: absolute;
        top: 0;
        right: 100%;
    }
}

@media (min-width: 62rem) {
    .section.full-width.hero-banner-container {
        position: relative;
        height: 32rem;
        margin-bottom: 8.625rem;
    }

    /* TODO refactor to work on firefox as well */
    .section.full-width.hero-banner-container:has(.hero-banner.careers) {
        height: 36.4rem;
    }

    .hero-banner .hero-banner-media-section {
        height: 32rem;
        position: absolute;
    }

    .hero-banner video,
    .hero-banner img,
    .hero-banner.image-right img,
    .hero-banner.image-left img,
    .hero-banner.image-center img
    {
        min-height: 100%;
        object-position: unset;
    }

    .hero-banner .hero-banner-heading-section {
        padding-left: 1rem ;
        padding-right: 1rem;
        max-width: 54.5rem;
    }

    .hero-banner .hero-banner-heading-container {
        position: absolute;
        top: 20.5rem;
    }

    .hero-banner .hero-banner-text-container {
        min-height: 16.125rem;
        width: 50rem;
        margin-bottom: -5.125rem;
        flex-wrap: unset;
        padding: unset;
    }

    .hero-banner .hero-banner-text-wrapper {
        flex-basis: calc(100% - 11.625rem);
        margin-bottom: unset;
        width: unset;
        padding-left: 2rem;
    }

    .hero-banner .hero-banner-button-container a.button.primary {
        margin-bottom: 0.5rem;
        height: 5.125rem;
        width: 5.125rem;
    }

    .hero-banner-text-wrapper h6 {
        font-size: var(--heading-font-size-xxs);
    }

    .hero-banner-text-wrapper h2,
    .hero-banner-text-wrapper h1 {
        font-size: 2.25rem;
        line-height: 1.3em;
    }

    .hero-banner .hero-banner-button-container {
        flex-basis: 11.625rem;
        justify-content: center;
        width: unset;
        align-items: unset;
        align-content: unset;
    }

    .hero-banner .hero-banner-button-container span {
        width: 100%;
        font-size: var(--heading-font-size-xxs);
        margin-left: unset;
    }

    .hero-banner.overlap .hero-banner-heading-section {
        max-width: unset;
        padding-left: unset;
        position: unset;
    }

    .hero-banner.overlap .hero-banner-heading-container {
        top: unset;
    }

    .hero-banner.overlap .hero-banner-heading-container.right-text {
        left: calc(100vw - 82.875rem / 3);
    }

    .hero-banner.overlap .hero-banner-text-container {
        display: block;
        padding: 3rem 2rem;
        width: 24.25rem;
        height: 26rem;
    }

    .hero-banner.overlap .hero-banner-text-wrapper {
        padding-left: unset;
    }

    .hero-banner.overlap.opaque .hero-banner-text-container {
        background: var(--primary-08-transparency);
        backdrop-filter: blur(10px);
    }

    .hero-banner.overlap .hero-banner-text-wrapper h2{
        font-size: var(--heading-font-size-l);
        line-height: 2.9375rem;
        margin: 0 auto 1.5rem;
    }

    .hero-banner.careers .hero-banner-heading-container {
        top: 0;
    }

    .hero-banner.careers .hero-banner-media-section {
        display: block;
        height: 40rem;
    }

    .hero-banner.careers .hero-banner-media-section::after {
        content: "";
        background: var(--transparent-grey-color-2);
        position: absolute;
        inset: 0;
        display: block;
    }

    .hero-banner.careers .hero-banner-text-wrapper h2,
    .hero-banner.careers .hero-banner-text-wrapper h1 {
        font-size: 3rem;
    }
}

@media (min-width: 77rem) {
    .hero-banner .hero-banner-heading-section{
        padding-left: 0;
        padding-right: 0;
        max-width: 75rem;
    }

    .hero-banner .hero-banner-text-container {
        width: 63.75rem;
        margin-bottom: -2rem;
    }

    .hero-banner.careers .hero-banner-text-container {
        width: 74rem;
    }

    .hero-banner .hero-banner-text-container::before {
        content: none;
    }

    .hero-banner .button-container {
        flex-direction: row;
    }

    .hero-banner.overlap .hero-banner-heading-container {
        padding-left: calc(50vw - 82.875rem / 2);
    }

    .hero-banner.overlap .hero-banner-heading-container.right-text {
        padding-left: calc(100vw - 82.875rem / 2);
        left: 0;
    }

    .section.full-width.hero-banner-container.overlap {
        height: 43.75rem;
        margin-bottom: 4.875rem;
    }

    .hero-banner.overlap .hero-banner-text-container {
        padding: 10rem 3.75rem 0;
        width: 27.5rem;
        height: 33.75rem;
    }

    .hero-banner.overlap .hero-banner-media-section {
        height: 43.75rem;
    }
}

/* Variation small-box */
@media (min-width: 62rem) {
    .hero-banner.overlap.small-box .hero-banner-text-container {
        height: 23.75rem;
        margin-top: 1rem;
        display: flex;
        align-items: center;
    }

    .hero-banner.overlap.small-box .hero-banner-heading-container.right-text {
        left: calc(100vw - 90.875rem / 3);
    }

    .hero-banner.overlap.small-box .hero-banner-text-wrapper {
        flex-basis: unset;
    }

    .hero-banner.overlap.small-box .hero-banner-text-wrapper h2 {
        font-size: var(--heading-font-size-m);
    }
}

@media (min-width: 77rem) {
    .section.full-width.hero-banner-container.overlap.hero-small-box {
        height: 36.25rem;
    }

    .hero-banner.overlap.small-box .hero-banner-media-section {
        height: 36.25rem;
    }

    .hero-banner.overlap.small-box .hero-banner-text-container {
        padding: 3rem;
        margin-top: 3rem;
        height: 23.75rem;
    }

    .hero-banner.overlap.small-box .hero-banner-heading-container.right-text {
        left: 0;
    }

    .hero-banner.overlap.small-box .hero-banner-text-wrapper h2 {
        font-size: var(--heading-font-size-l);
    }
}

